--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "mongodb": "^6.0.0",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
@@ -24,5 +25,8 @@
   "devDependencies": {
     "eslint": "latest",
     "eslint-config-next": "latest"
+  },
+  "browser": {
+    "child_process": false
   }
 }
